// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test one side relationship schema query type generation 1`] = `
"input IDInput {
  ne: ID
  eq: ID
  le: ID
  lt: ID
  ge: ID
  gt: ID
  in: [ID]
  contains: ID
  startsWith: ID
  endsWith: ID
}

\\"\\"\\" @model \\"\\"\\"
type Note {
  id: ID!
  title: String!
  description: String!

  \\"\\"\\"@oneToMany field: 'note', key: 'test_id'\\"\\"\\"
  tests(filter: TestFilter): [Test]!
}

input NoteFilter {
  id: IDInput
  title: StringInput
  description: StringInput
  and: [NoteFilter]
  or: [NoteFilter]
  not: NoteFilter
}

type NoteResultList {
  items: [Note]!
  offset: Int
  limit: Int
  total: Int
}

input OrderByInput {
  field: String!
  order: SortDirectionEnum = ASC
}

input PageRequest {
  limit: Int
  offset: Int
}

type Query {
  getNote(id: ID!): Note
  findNotes(filter: NoteFilter, page: PageRequest, orderBy: OrderByInput): NoteResultList!
  getTest(id: ID!): Test
  findTests(filter: TestFilter, page: PageRequest, orderBy: OrderByInput): TestResultList!
}

enum SortDirectionEnum {
  DESC
  ASC
}

input StringInput {
  ne: String
  eq: String
  le: String
  lt: String
  ge: String
  gt: String
  in: [String]
  contains: String
  startsWith: String
  endsWith: String
}

\\"\\"\\"@model\\"\\"\\"
type Test {
  id: ID!
  name: String

  \\"\\"\\"@manyToOne field: 'tests', key: 'test_id'\\"\\"\\"
  note: Note
}

input TestFilter {
  id: IDInput
  name: StringInput
  and: [TestFilter]
  or: [TestFilter]
  not: TestFilter
}

type TestResultList {
  items: [Test]!
  offset: Int
  limit: Int
  total: Int
}
"
`;

exports[`Test snapshot config gql 1`] = `
"directive @test(description: String) on FIELD_DEFINITION | ENUM_VALUE

\\"\\"\\" @model \\"\\"\\"
type Comment {
  id: ID!
  title: String!
  description: String!

  \\"\\"\\"@manyToOne field: 'comments', key: 'note_id'\\"\\"\\"
  noteComment: Note!
}

input CommentCreationInput {
  id: ID
  title: String!
  description: String!
  note_id: ID!
}

input CommentFilter {
  id: IDInput
  title: StringInput
  description: StringInput
  and: [CommentFilter]
  or: [CommentFilter]
  not: CommentFilter
}

input CommentMutationInput {
  id: ID!
  title: String
  description: String
  note_id: ID
}

type CommentResultList {
  items: [Comment]!
  offset: Int
  limit: Int
  total: Int
}

input CommentSubscriptionFilter {
  id: ID
  title: String
  description: String
}

input IDInput {
  ne: ID
  eq: ID
  le: ID
  lt: ID
  ge: ID
  gt: ID
  in: [ID]
  contains: ID
  startsWith: ID
  endsWith: ID
}

type Mutation {
  likeNote(id: ID!): Note!
  createNote(input: NoteCreationInput!): Note!
  updateNote(input: NoteMutationInput!): Note!
  deleteNote(input: NoteMutationInput!): Note!
  createComment(input: CommentCreationInput!): Comment!
  updateComment(input: CommentMutationInput!): Comment!
  deleteComment(input: CommentMutationInput!): Comment!
  createTest(input: TestCreationInput!): Test!
  updateTest(input: TestMutationInput!): Test!
  deleteTest(input: TestMutationInput!): Test!
}

\\"\\"\\" @model \\"\\"\\"
type Note {
  id: ID!
  title: String! @test(description: \\"mock directive\\")
  description: String!

  \\"\\"\\"@oneToMany field: 'noteComment', key: 'note_id'\\"\\"\\"
  comments(filter: CommentFilter): [Comment]!

  \\"\\"\\"@oneToOne key: 'test_id'\\"\\"\\"
  test: Test
}

input NoteCreationInput {
  id: ID
  title: String!
  description: String!
  test_id: ID
}

input NoteFilter {
  id: IDInput
  title: StringInput
  description: StringInput
  and: [NoteFilter]
  or: [NoteFilter]
  not: NoteFilter
}

input NoteMutationInput {
  id: ID!
  title: String
  description: String
  test_id: ID
}

type NoteResultList {
  items: [Note]!
  offset: Int
  limit: Int
  total: Int
}

input NoteSubscriptionFilter {
  id: ID
  title: String
  description: String
}

input OrderByInput {
  field: String!
  order: SortDirectionEnum = ASC
}

input PageRequest {
  limit: Int
  offset: Int
}

type Query {
  getLikedNotes(id: ID!, names: [String]!): Note!
  getNote(id: ID!): Note
  findNotes(filter: NoteFilter, page: PageRequest, orderBy: OrderByInput): NoteResultList!
  getComment(id: ID!): Comment
  findComments(filter: CommentFilter, page: PageRequest, orderBy: OrderByInput): CommentResultList!
  getTest(id: ID!): Test
  findTests(filter: TestFilter, page: PageRequest, orderBy: OrderByInput): TestResultList!
}

enum SortDirectionEnum {
  DESC
  ASC
}

input StringInput {
  ne: String
  eq: String
  le: String
  lt: String
  ge: String
  gt: String
  in: [String]
  contains: String
  startsWith: String
  endsWith: String
}

type Subscription {
  newNote(filter: NoteSubscriptionFilter): Note!
  updatedNote(filter: NoteSubscriptionFilter): Note!
  deletedNote(filter: NoteSubscriptionFilter): Note!
  newComment(filter: CommentSubscriptionFilter): Comment!
  updatedComment(filter: CommentSubscriptionFilter): Comment!
  deletedComment(filter: CommentSubscriptionFilter): Comment!
  newTest(filter: TestSubscriptionFilter): Test!
  updatedTest(filter: TestSubscriptionFilter): Test!
  deletedTest(filter: TestSubscriptionFilter): Test!
}

\\"\\"\\"@model\\"\\"\\"
type Test {
  id: ID!
  name: String
}

input TestCreationInput {
  id: ID
  name: String
}

input TestFilter {
  id: IDInput
  name: StringInput
  and: [TestFilter]
  or: [TestFilter]
  not: TestFilter
}

input TestMutationInput {
  id: ID!
  name: String
}

type TestResultList {
  items: [Test]!
  offset: Int
  limit: Int
  total: Int
}

input TestSubscriptionFilter {
  id: ID
  name: String
}"
`;

exports[`Test snapshot config js 1`] = `
"directive @test(description: String) on FIELD_DEFINITION | ENUM_VALUE

\\"\\"\\" @model \\"\\"\\"
type Comment {
  id: ID!
  title: String!
  description: String!

  \\"\\"\\"@manyToOne field: 'comments', key: 'note_id'\\"\\"\\"
  noteComment: Note!
}

input CommentCreationInput {
  id: ID
  title: String!
  description: String!
  note_id: ID!
}

input CommentFilter {
  id: IDInput
  title: StringInput
  description: StringInput
  and: [CommentFilter]
  or: [CommentFilter]
  not: CommentFilter
}

input CommentMutationInput {
  id: ID!
  title: String
  description: String
  note_id: ID
}

type CommentResultList {
  items: [Comment]!
  offset: Int
  limit: Int
  total: Int
}

input CommentSubscriptionFilter {
  id: ID
  title: String
  description: String
}

input IDInput {
  ne: ID
  eq: ID
  le: ID
  lt: ID
  ge: ID
  gt: ID
  in: [ID]
  contains: ID
  startsWith: ID
  endsWith: ID
}

type Mutation {
  likeNote(id: ID!): Note!
  createNote(input: NoteCreationInput!): Note!
  updateNote(input: NoteMutationInput!): Note!
  deleteNote(input: NoteMutationInput!): Note!
  createComment(input: CommentCreationInput!): Comment!
  updateComment(input: CommentMutationInput!): Comment!
  deleteComment(input: CommentMutationInput!): Comment!
  createTest(input: TestCreationInput!): Test!
  updateTest(input: TestMutationInput!): Test!
  deleteTest(input: TestMutationInput!): Test!
}

\\"\\"\\" @model \\"\\"\\"
type Note {
  id: ID!
  title: String!
  description: String!

  \\"\\"\\"@oneToMany field: 'noteComment', key: 'note_id'\\"\\"\\"
  comments(filter: CommentFilter): [Comment]!

  \\"\\"\\"@oneToOne key: 'test_id'\\"\\"\\"
  test: Test
}

input NoteCreationInput {
  id: ID
  title: String!
  description: String!
  test_id: ID
}

input NoteFilter {
  id: IDInput
  title: StringInput
  description: StringInput
  and: [NoteFilter]
  or: [NoteFilter]
  not: NoteFilter
}

input NoteMutationInput {
  id: ID!
  title: String
  description: String
  test_id: ID
}

type NoteResultList {
  items: [Note]!
  offset: Int
  limit: Int
  total: Int
}

input NoteSubscriptionFilter {
  id: ID
  title: String
  description: String
}

input OrderByInput {
  field: String!
  order: SortDirectionEnum = ASC
}

input PageRequest {
  limit: Int
  offset: Int
}

type Query {
  getLikedNotes(id: ID!, names: [String]!): Note!
  getNote(id: ID!): Note
  findNotes(filter: NoteFilter, page: PageRequest, orderBy: OrderByInput): NoteResultList!
  getComment(id: ID!): Comment
  findComments(filter: CommentFilter, page: PageRequest, orderBy: OrderByInput): CommentResultList!
  getTest(id: ID!): Test
  findTests(filter: TestFilter, page: PageRequest, orderBy: OrderByInput): TestResultList!
}

enum SortDirectionEnum {
  DESC
  ASC
}

input StringInput {
  ne: String
  eq: String
  le: String
  lt: String
  ge: String
  gt: String
  in: [String]
  contains: String
  startsWith: String
  endsWith: String
}

type Subscription {
  newNote(filter: NoteSubscriptionFilter): Note!
  updatedNote(filter: NoteSubscriptionFilter): Note!
  deletedNote(filter: NoteSubscriptionFilter): Note!
  newComment(filter: CommentSubscriptionFilter): Comment!
  updatedComment(filter: CommentSubscriptionFilter): Comment!
  deletedComment(filter: CommentSubscriptionFilter): Comment!
  newTest(filter: TestSubscriptionFilter): Test!
  updatedTest(filter: TestSubscriptionFilter): Test!
  deletedTest(filter: TestSubscriptionFilter): Test!
}

\\"\\"\\"@model\\"\\"\\"
type Test {
  id: ID!
  name: String
}

input TestCreationInput {
  id: ID
  name: String
}

input TestFilter {
  id: IDInput
  name: StringInput
  and: [TestFilter]
  or: [TestFilter]
  not: TestFilter
}

input TestMutationInput {
  id: ID!
  name: String
}

type TestResultList {
  items: [Test]!
  offset: Int
  limit: Int
  total: Int
}

input TestSubscriptionFilter {
  id: ID
  name: String
}
"
`;

exports[`Test snapshot config ts 1`] = `
"directive @test(description: String) on FIELD_DEFINITION | ENUM_VALUE

\\"\\"\\" @model \\"\\"\\"
type Comment {
  id: ID!
  title: String!
  description: String!

  \\"\\"\\"@manyToOne field: 'comments', key: 'note_id'\\"\\"\\"
  noteComment: Note!
}

input CommentCreationInput {
  id: ID
  title: String!
  description: String!
  note_id: ID!
}

input CommentFilter {
  id: IDInput
  title: StringInput
  description: StringInput
  and: [CommentFilter]
  or: [CommentFilter]
  not: CommentFilter
}

input CommentMutationInput {
  id: ID!
  title: String
  description: String
  note_id: ID
}

type CommentResultList {
  items: [Comment]!
  offset: Int
  limit: Int
  total: Int
}

input CommentSubscriptionFilter {
  id: ID
  title: String
  description: String
}

input IDInput {
  ne: ID
  eq: ID
  le: ID
  lt: ID
  ge: ID
  gt: ID
  in: [ID]
  contains: ID
  startsWith: ID
  endsWith: ID
}

type Mutation {
  likeNote(id: ID!): Note!
  createNote(input: NoteCreationInput!): Note!
  updateNote(input: NoteMutationInput!): Note!
  deleteNote(input: NoteMutationInput!): Note!
  createComment(input: CommentCreationInput!): Comment!
  updateComment(input: CommentMutationInput!): Comment!
  deleteComment(input: CommentMutationInput!): Comment!
  createTest(input: TestCreationInput!): Test!
  updateTest(input: TestMutationInput!): Test!
  deleteTest(input: TestMutationInput!): Test!
}

\\"\\"\\" @model \\"\\"\\"
type Note {
  id: ID!
  title: String!
  description: String!

  \\"\\"\\"@oneToMany field: 'noteComment', key: 'note_id'\\"\\"\\"
  comments(filter: CommentFilter): [Comment]!

  \\"\\"\\"@oneToOne key: 'test_id'\\"\\"\\"
  test: Test
}

input NoteCreationInput {
  id: ID
  title: String!
  description: String!
  test_id: ID
}

input NoteFilter {
  id: IDInput
  title: StringInput
  description: StringInput
  and: [NoteFilter]
  or: [NoteFilter]
  not: NoteFilter
}

input NoteMutationInput {
  id: ID!
  title: String
  description: String
  test_id: ID
}

type NoteResultList {
  items: [Note]!
  offset: Int
  limit: Int
  total: Int
}

input NoteSubscriptionFilter {
  id: ID
  title: String
  description: String
}

input OrderByInput {
  field: String!
  order: SortDirectionEnum = ASC
}

input PageRequest {
  limit: Int
  offset: Int
}

type Query {
  getLikedNotes(id: ID!, names: [String]!): Note!
  getNote(id: ID!): Note
  findNotes(filter: NoteFilter, page: PageRequest, orderBy: OrderByInput): NoteResultList!
  getComment(id: ID!): Comment
  findComments(filter: CommentFilter, page: PageRequest, orderBy: OrderByInput): CommentResultList!
  getTest(id: ID!): Test
  findTests(filter: TestFilter, page: PageRequest, orderBy: OrderByInput): TestResultList!
}

enum SortDirectionEnum {
  DESC
  ASC
}

input StringInput {
  ne: String
  eq: String
  le: String
  lt: String
  ge: String
  gt: String
  in: [String]
  contains: String
  startsWith: String
  endsWith: String
}

type Subscription {
  newNote(filter: NoteSubscriptionFilter): Note!
  updatedNote(filter: NoteSubscriptionFilter): Note!
  deletedNote(filter: NoteSubscriptionFilter): Note!
  newComment(filter: CommentSubscriptionFilter): Comment!
  updatedComment(filter: CommentSubscriptionFilter): Comment!
  deletedComment(filter: CommentSubscriptionFilter): Comment!
  newTest(filter: TestSubscriptionFilter): Test!
  updatedTest(filter: TestSubscriptionFilter): Test!
  deletedTest(filter: TestSubscriptionFilter): Test!
}

\\"\\"\\"@model\\"\\"\\"
type Test {
  id: ID!
  name: String
}

input TestCreationInput {
  id: ID
  name: String
}

input TestFilter {
  id: IDInput
  name: StringInput
  and: [TestFilter]
  or: [TestFilter]
  not: TestFilter
}

input TestMutationInput {
  id: ID!
  name: String
}

type TestResultList {
  items: [Test]!
  offset: Int
  limit: Int
  total: Int
}

input TestSubscriptionFilter {
  id: ID
  name: String
}
"
`;
